# fpvm

./: CONTRIBUTE.md  Cargo.toml  devenv.nix  devenv.yaml
doc/: lexer.md  syntax.md
examples/: binsearch.fpvm  cond.fpvm  counter.fpvm  eval.fpvm  fact.fpvm  factorial.fpvm  foldl.fpvm  foldr.fpvm  func.fpvm  lambda.fpvm  len.fpvm  mergesort.fpvm  setq.fpvm  shadowing.fpvm  tuple.fpvm  while.fpvm
src/: lib.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/syntax/: grammar.lalrpop  mod.rs  node.rs  syntax.rs
tests/code/: arithmetic.fpvm  binsearch.fpvm  counter.fpvm  filter.fpvm  foldl.fpvm  foldr.fpvm  len.fpvm  list_operations.fpvm  mergesort.fpvm  setq.fpvm  shadowing.fpvm  tuple.fpvm  while.fpvm
tests/golden/: counter.golden  foldl.golden  list_operations.golden  mergesort.golden  setq.golden  tuple.golden
