[package]
name = "fpvm"
version = "0.1.0"
edition = "2024"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "lex_bin" 
path = "src/bin/lex_bin.rs"

[[bin]]
name = "lexi"
path = "src/bin/lexi.rs"

[[bin]]
name = "syntax_bin" 
path = "src/bin/syntax_bin.rs"

[dependencies]
lalrpop-util = { version = "0.23.0" }

[build-dependencies]
lalrpop = { version = "0.23.0" }
